Display relationship indexes in SHOW TRANSACTIONS ()
These were not returned by QuerySnapshot.indexes, so they were excluded.
This change adds them in.

cl: fix a bug where relationship indexes were not returned in the
`indexes` column of `SHOW TRANSACTIONS`